# intrepion-saying-hello-json-rpc-server-rust-actix-web

./: Cargo.toml  Dockerfile  README.md
.do/: app.yaml  deploy.template.yaml
.github/workflows/: main.yaml
scripts/: docker_build.sh  docker_run.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: json_rpc.rs  mod.rs
tests/api/: helpers.rs
