[package]
name = "intrepion-saying-hello-json-rpc-server-rust-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
env_logger = "0.9.3"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
