[package]
name = "intrepion-saying-hello-json-rpc-server-rust-actix-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.66"
config = "0.13.2"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }
log = "0.4.17"
serde = { version = "1.0.147", features = ["derive"] }
serde-aux = "4.1.0"
serde_json = "1.0.87"
tokio = { version = "1.23.1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-actix-web = "0.6.2"

[dev-dependencies]
tokio = { version = "1.23.1", features = ["rt", "macros"] }

[dev-dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls", "cookies"]
